# pyDistrib

./: .coveragerc  .gitignore  README.md  pyproject.toml  setup.py
.circleci/: config.yml
pyDistrib/: __init__.py  atomic_counter.py  pyDistribServer.py  server.py  slave.py  udp_socket_wrapper.py  worker.py
pyDistrib/tests/: TestServer.py  test_server.py
tests/: test_server.py  test_slave.py
