[tool.poetry]
name = "pyDistrib"
version = "0.0.2"
description = "A package to distribute Python computations across devices"
authors = ["Rayan Hatout <rayan.hatout@gmail.com>"]
license = "GPL-3.0-only"
classifiers=[
        "Development Status :: 1 - Planning",
        "Natural Language :: English",
        "Intended Audience :: Developers",
        "Operating System :: OS Independent",
]
repository="https://github.com/rayanht/pyDistrib"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
