[tool.poetry]
name = "pyDistrib"
version = "0.0.4"
description = "A package to distribute Python computations across devices"
authors = ["Rayan Hatout <rayan.hatout@gmail.com>"]
license = "GPL-3.0-only"
classifiers=[
        "Development Status :: 1 - Planning",
        "Natural Language :: English",
        "Intended Audience :: Developers",
        "Operating System :: OS Independent",
]
repository="https://github.com/rayanht/pyDistrib"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.7.9"
coveralls = "^2.0.0"
pylint = "^2.5.2"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
codecov = "^2.0.22"
astpretty = "^2.0.0"
numpy = "^1.18.4"
numba = "^0.49.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
